src/test/ui/parser/trait-object-trait-parens.stderr
error: `?Trait` is not permitted in trait object types
  --> $DIR/trait-object-trait-parens.rs:6:25
   |
LL |     let _: Box<(Copy) + (?Sized) + (for<'a> Trait<'a>)>;
   |                         ^^^^^^^^

error: `?Trait` is not permitted in trait object types
  --> $DIR/trait-object-trait-parens.rs:9:47
   |
LL |     let _: Box<(for<'a> Trait<'a>) + (Copy) + (?Sized)>;
   |                                               ^^^^^^^^

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/trait-object-trait-parens.rs:9:31
   |
LL |     let _: Box<(for<'a> Trait<'a>) + (Copy) + (?Sized)>;
   |                               ^^ undeclared lifetime

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0261`.
